--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,3 +1,9 @@
-<p>
-  landing works!
-</p>
+
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <ion-img class="landingImage" src="assets/img/Education_sucess.png"></ion-img>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
