--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,5 +1,8 @@
 
+
 .ion-grid {
-  height: 100%;
-  justify-content: center;
+  display: flex;
+  height: 100% !important;
+  justify-content: center !important;
+  align-items: center !important;
 }
