--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,3 +1,13 @@
+<ion-header [translucent]="true">
+  <ion-toolbar>
+    <ion-title>
+      Nickanme
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
+
+
+<ion-content>
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
@@ -18,3 +28,4 @@
   </ion-tab-bar>
 
 </ion-tabs>
+</ion-content>
