Small grammar fix

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -2,6 +2,6 @@
 
 <ion-content>
 
-  <ion-button (click)="logout()">Lougout</ion-button>
+  <ion-button (click)="logout()">Logout</ion-button>
 
 </ion-content>
