--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -3,6 +3,14 @@
     <ion-row>
       <ion-col>
         <ion-img class="landingImage" src="assets/img/Education_sucess.png"></ion-img>
+        <p>Willkommen in deinem digitalen Klassenzimmer.</p>
+        <p>Schön, das du da bist.</p>
+        <ion-button  [routerLink]="['/login']">Hereinspaziert</ion-button>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+
       </ion-col>
     </ion-row>
   </ion-grid>
