--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Nickanme
+      Hallo, {{currentUser.nickname}}
     </ion-title>
   </ion-toolbar>
 </ion-header>
